// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginContainer render snapshots 📸 LoginContainer should match  snap shot  1`] = `
<div
  className="login__container"
>
  <p>
    Maybe something should go here...
  </p>
  <button
    className="billsnap__generic-btn"
  >
    Login button
  </button>
</div>
`;

exports[`LoginPage render snapshots 📸 LoginPage should match snap shot 1`] = `
<div
  className="page__login"
>
  <div
    className="login__container"
  >
    <p>
      Maybe something should go here...
    </p>
    <button
      className="billsnap__generic-btn"
      onClick={[Function]}
    >
      Login button
    </button>
  </div>
</div>
`;
